vlib/v/parser/tests/invalid_struct_decl_script_err.vv
mynum := 10

struct Abc {
	x int
}
